# learn-mcp

./: .dockerignore  .gitignore  CLAUDE.md  COPILOT-SPACE-DOC.md  Dockerfile  GITHUB-MCP-GUIDE.md  INDEX.md  LICENSE  README.md  build_index.py  merge_refs.py  pyproject.toml  references.json  requirements.txt  server.py
data/: agents.json  autonomous-agents.json  claude-code.json  fine-tuning.json  gpu-compute.json  inference.json  mcp.json  mlops.json  prompt-engineering.json  rag.json  seo.json  vector-db.json
mcp-recommender/: Dockerfile  requirements.txt  server.py
